--- a/css/constructora-sustentable.css
+++ b/css/constructora-sustentable.css
@@ -1,179 +1,1 @@
-/* line 7, ../sass/constructora-sustentable.scss */
-#linea2 {
-  border-bottom: 1px solid black;
-  width: 30%;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-
-/* line 14, ../sass/constructora-sustentable.scss */
-article .cons-sustentable {
-  text-align: center;
-}
-/* line 17, ../sass/constructora-sustentable.scss */
-article .cons-sustentable figure img {
-  width: 100%;
-  max-height: 250px;
-  max-width: 480px;
-  height: auto;
-}
-/* line 24, ../sass/constructora-sustentable.scss */
-article .cons-sustentable p {
-  margin-top: 1em;
-}
-
-/* line 31, ../sass/constructora-sustentable.scss */
-article .dis-bioclimatico h3 {
-  text-align: center;
-}
-/* line 34, ../sass/constructora-sustentable.scss */
-article .dis-bioclimatico #linea2 {
-  border-bottom: 1px solid black;
-  width: 30%;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-/* line 42, ../sass/constructora-sustentable.scss */
-article .dis-bioclimatico figure img {
-  width: 100%;
-  max-width: 173px;
-  height: auto;
-}
-/* line 48, ../sass/constructora-sustentable.scss */
-article .dis-bioclimatico p {
-  font-size: 1em;
-}
-
-/* line 54, ../sass/constructora-sustentable.scss */
-#bg {
-  background-image: url("../img/bgimter.png");
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-}
-
-/* line 63, ../sass/constructora-sustentable.scss */
-.container h1 {
-  font-size: 1.5em;
-  text-align: center;
-}
-/* line 68, ../sass/constructora-sustentable.scss */
-.container #linea {
-  border-bottom: 1px solid #7ac043;
-  margin: auto;
-  margin-bottom: 10px;
-  width: 50%;
-}
-
-/* line 77, ../sass/constructora-sustentable.scss */
-.interiorismo h3, .siempre-creciendo h3, .financiamiento h3 {
-  text-align: center;
-}
-
-/* line 82, ../sass/constructora-sustentable.scss */
-article {
-  width: 100%;
-}
-/* line 84, ../sass/constructora-sustentable.scss */
-article .logo-financia-credito {
-  padding: 0;
-}
-/* line 87, ../sass/constructora-sustentable.scss */
-article .logo-financia-credito figure img {
-  width: 100px;
-  height: auto;
-}
-/* line 93, ../sass/constructora-sustentable.scss */
-article .logo-financia-credito ul li {
-  list-style-type: none;
-}
-/* line 95, ../sass/constructora-sustentable.scss */
-article .logo-financia-credito ul li:before {
-  background: red;
-  border-radius: 50%;
-  content: "";
-  display: inline-block;
-  height: 5px;
-  margin-right: 5px;
-  width: 5px;
-}
-
-/* line 109, ../sass/constructora-sustentable.scss */
-.btn a {
-  text-decoration: none;
-  color: white;
-}
-
-/* line 114, ../sass/constructora-sustentable.scss */
-.boton {
-  margin: 1em 0;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 122, ../sass/constructora-sustentable.scss */
-  .container h1 {
-    margin-top: 200px;
-    text-align: left;
-  }
-  /* line 126, ../sass/constructora-sustentable.scss */
-  .container #linea {
-    border-bottom: 2px solid #7ac043;
-    margin-left: 0;
-    width: 30%;
-  }
-
-  /* line 134, ../sass/constructora-sustentable.scss */
-  article .cons-sustentable {
-    text-align: left;
-  }
-  /* line 136, ../sass/constructora-sustentable.scss */
-  article .cons-sustentable p {
-    margin-top: 0;
-    padding-top: 0;
-  }
-
-  /* line 145, ../sass/constructora-sustentable.scss */
-  article .dis-bioclimatico h3 {
-    text-align: left;
-  }
-  /* line 148, ../sass/constructora-sustentable.scss */
-  article .dis-bioclimatico #linea2 {
-    margin-left: 0;
-  }
-
-  /* line 153, ../sass/constructora-sustentable.scss */
-  .interiorismo {
-    margin-top: 3em;
-  }
-  /* line 155, ../sass/constructora-sustentable.scss */
-  .interiorismo h3 {
-    text-align: right;
-  }
-
-  /* line 162, ../sass/constructora-sustentable.scss */
-  article .siempre-creciendo h3 {
-    margin-top: 3em;
-  }
-  /* line 166, ../sass/constructora-sustentable.scss */
-  article .siempre-creciendo p {
-    width: 80%;
-    margin: auto;
-  }
-
-  /* line 173, ../sass/constructora-sustentable.scss */
-  article .financiamiento {
-    margin-top: 3em;
-  }
-  /* line 175, ../sass/constructora-sustentable.scss */
-  article .financiamiento h3 {
-    border-right: 1px solid black;
-  }
-
-  /* line 180, ../sass/constructora-sustentable.scss */
-  .logo-financia-credito {
-    margin-top: 2em;
-  }
-}
+#linea2{border-bottom:1px solid black;width:30%;margin:0 auto;margin-bottom:30px}article .cons-sustentable{text-align:center}article .cons-sustentable figure img{width:100%;max-height:250px;max-width:480px;height:auto}article .cons-sustentable p{margin-top:1em}article .dis-bioclimatico h3{text-align:center}article .dis-bioclimatico #linea2{border-bottom:1px solid black;width:30%;margin:0 auto;margin-bottom:30px}article .dis-bioclimatico figure img{width:100%;max-width:173px;height:auto}article .dis-bioclimatico p{font-size:1em}#bg{background-image:url("../img/bgimter.png");width:100%;background-position:center;background-repeat:no-repeat;background-size:cover;height:auto}.container h1{font-size:1.5em;text-align:center}.container #linea{border-bottom:1px solid #7ac043;margin:auto;margin-bottom:10px;width:50%}.interiorismo h3,.siempre-creciendo h3,.financiamiento h3{text-align:center}article{width:100%}article .logo-financia-credito{padding:0}article .logo-financia-credito figure img{width:100px;height:auto}article .logo-financia-credito ul li{list-style-type:none}article .logo-financia-credito ul li:before{background:red;border-radius:50%;content:"";display:inline-block;height:5px;margin-right:5px;width:5px}.btn a{text-decoration:none;color:white}.boton{margin:1em 0;text-align:center}@media screen and (min-width: 768px){.container h1{margin-top:200px;text-align:left}.container #linea{border-bottom:2px solid #7ac043;margin-left:0;width:30%}article .cons-sustentable{text-align:left}article .cons-sustentable p{margin-top:0;padding-top:0}article .dis-bioclimatico h3{text-align:left}article .dis-bioclimatico #linea2{margin-left:0}.interiorismo{margin-top:3em}.interiorismo h3{text-align:right}article .siempre-creciendo h3{margin-top:3em}article .siempre-creciendo p{width:80%;margin:auto}article .financiamiento{margin-top:3em}article .financiamiento h3{border-right:1px solid black}.logo-financia-credito{margin-top:2em}}
