--- a/css/main.css
+++ b/css/main.css
@@ -1,291 +1,1 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-@import "compass/reset";
- */
-/* line 16, ../sass/main.scss */
-.container figure#logo-movil img {
-  width: 156px;
-  height: auto;
-  display: inline-block;
-  vertical-align: top;
-}
-
-/* MENU-MOBILE */
-/* line 28, ../sass/main.scss */
-#icon-movil img {
-  height: 74px;
-  width: 80px;
-}
-
-/* line 32, ../sass/main.scss */
-#mobile-menu-button {
-  float: right;
-  position: relative;
-  text-align: center;
-}
-
-/* line 37, ../sass/main.scss */
-#mobile-main-menu {
-  display: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* line 43, ../sass/main.scss */
-#mobile-main-menu a {
-  border-top: 1px solid #eee;
-  color: #000;
-  display: block;
-  padding: 10px 0;
-  text-align: center;
-  width: 100%;
-}
-
-/* line 51, ../sass/main.scss */
-#mobile-main-menu li {
-  list-style-type: none;
-  margin: 0;
-}
-
-/* line 55, ../sass/main.scss */
-#mobile-main-menu a:hover {
-  background-color: #ebebeb;
-  color: #4f4f4f;
-  text-decoration: none;
-}
-
-/* line 60, ../sass/main.scss */
-#main-menu {
-  margin-top: 30px;
-}
-
-/* line 64, ../sass/main.scss */
-#main-menu a {
-  color: #000;
-}
-
-/* line 67, ../sass/main.scss */
-#main-menu:hover {
-  color: #a3d900;
-}
-
-/* line 71, ../sass/main.scss */
-#main-menu.nav-pills > li.active > a,
-#main-menu.nav-pills > li.active > a:hover,
-#main-menu.nav-pills > li.active > a:focus,
-#main-menu.nav-pills > li > a:hover {
-  background: none;
-}
-
-/* line 77, ../sass/main.scss */
-#main-menu.nav-pills > li.active > a,
-#main-menu.nav-pills > li.active > a:hover,
-#main-menu.nav-pills > li.active > a:focus,
-#main-menu.nav-pills > li > a:hover {
-  color: #fff;
-}
-
-/* line 83, ../sass/main.scss */
-#main-menu.nav-pills > li.active > a,
-#main-menu.nav-pills > li.active > a:hover,
-#main-menu.nav-pills > li.active > a:focus,
-#main-menu.nav-pills > li > a:hover {
-  background: #00853e;
-}
-
-/* line 89, ../sass/main.scss */
-.fondomenu {
-  background-color: #00853e;
-}
-
-/* line 92, ../sass/main.scss */
-.logos {
-  margin-top: 15px;
-}
-
-/* line 95, ../sass/main.scss */
-.txtmenu {
-  margin: 0;
-  color: white;
-  float: right;
-  font-size: 1.1em;
-  list-style-type: none;
-  padding: 0;
-  position: absolute;
-  right: 89px;
-  top: 27px;
-}
-
-/* line 106, ../sass/main.scss */
-.col-xs-9 {
-  padding: 0;
-}
-
-/* line 111, ../sass/main.scss */
-#container-slider {
-  position: fixed;
-}
-/* line 113, ../sass/main.scss */
-#container-slider img {
-  width: 1600px;
-  height: auto;
-}
-
-/* line 119, ../sass/main.scss */
-.servicios {
-  text-align: center;
-}
-/* line 121, ../sass/main.scss */
-.servicios h3 {
-  font-size: 1.1em;
-  text-align: center;
-  text-transform: uppercase;
-}
-/* line 126, ../sass/main.scss */
-.servicios .col-xs-6 {
-  border-bottom: 1px solid #4f4f4f;
-  margin-bottom: 10px;
-  text-align: center;
-}
-/* line 131, ../sass/main.scss */
-.servicios figure {
-  display: inline-block;
-  margin: 0 auto;
-  vertical-align: top;
-}
-/* line 135, ../sass/main.scss */
-.servicios figure img {
-  height: auto;
-  margin-bottom: 10px;
-  max-width: 350px;
-  width: 100%;
-}
-
-/* line 145, ../sass/main.scss */
-.footer {
-  text-align: center;
-  width: 100%;
-}
-/* line 148, ../sass/main.scss */
-.footer ul {
-  background: grey;
-  padding: 0;
-  width: 100%;
-}
-/* line 152, ../sass/main.scss */
-.footer ul li {
-  margin: -4px;
-  background: red;
-  display: inline-block;
-  list-style-type: none;
-  vertical-align: middle;
-}
-/* line 159, ../sass/main.scss */
-.footer ul li a {
-  padding: 1em;
-}
-
-/* line 165, ../sass/main.scss */
-.facebook, .twitter, .google {
-  padding: 2.13em 0;
-}
-
-/* line 171, ../sass/main.scss */
-.tel {
-  font-size: 14px;
-}
-/* line 173, ../sass/main.scss */
-.tel li {
-  width: 30%;
-}
-
-/* line 180, ../sass/main.scss */
-.carousel-indicators {
-  display: none;
-}
-
-/* line 183, ../sass/main.scss */
-.carousel-control.left, .carousel-control.right {
-  display: none;
-}
-
-/* line 186, ../sass/main.scss */
-.item {
-  background: #7ac043;
-}
-
-/* line 189, ../sass/main.scss */
-.carousel-caption {
-  background: grey;
-  padding-left: 9px;
-  width: 80%;
-  color: #4f4f4f;
-  color: white;
-  display: inline-block;
-  text-align: left;
-  text-shadow: none;
-  vertical-align: middle;
-}
-
-/* line 200, ../sass/main.scss */
-.flechita {
-  font-size: 4em;
-  height: auto;
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-}
-/* line 208, ../sass/main.scss */
-.flechita a {
-  color: white;
-}
-
-/* line 214, ../sass/main.scss */
-.txt-servicios {
-  width: 80%;
-}
-
-/* line 221, ../sass/main.scss */
-footer #sociales {
-  background: #20358c;
-  height: 20px;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 229, ../sass/main.scss */
-  .fondomenu {
-    background: none;
-    background: rgba(255, 255, 255, 0.5);
-    position: absolute;
-    width: 100%;
-    z-index: 100;
-  }
-
-  /* line 238, ../sass/main.scss */
-  figure#logo-desktop img {
-    height: auto;
-    margin-left: 80px;
-    width: 100px;
-  }
-
-  /* line 244, ../sass/main.scss */
-  .carousel {
-    position: relative;
-  }
-
-  /* line 250, ../sass/main.scss */
-  .carousel-caption {
-    width: 92%;
-  }
-}
-/* line 257, ../sass/main.scss */
-#main-menu {
-  font-weight: bold;
-  margin-top: 70px;
-}
+.container figure#logo-movil img{width:156px;height:auto;display:inline-block;vertical-align:top}#icon-movil img{height:74px;width:80px}#mobile-menu-button{float:right;position:relative;text-align:center}#mobile-main-menu{display:none;margin:0;padding:0}#mobile-main-menu a{border-top:1px solid #eee;color:#000;display:block;padding:10px 0;text-align:center;width:100%}#mobile-main-menu li{list-style-type:none;margin:0}#mobile-main-menu a:hover{background-color:#ebebeb;color:#4f4f4f;text-decoration:none}#main-menu{margin-top:30px}#main-menu a{color:#000}#main-menu:hover{color:#a3d900}#main-menu.nav-pills>li.active>a,#main-menu.nav-pills>li.active>a:hover,#main-menu.nav-pills>li.active>a:focus,#main-menu.nav-pills>li>a:hover{background:none}#main-menu.nav-pills>li.active>a,#main-menu.nav-pills>li.active>a:hover,#main-menu.nav-pills>li.active>a:focus,#main-menu.nav-pills>li>a:hover{color:#fff}#main-menu.nav-pills>li.active>a,#main-menu.nav-pills>li.active>a:hover,#main-menu.nav-pills>li.active>a:focus,#main-menu.nav-pills>li>a:hover{background:#00853e}.fondomenu{background-color:#00853e}.logos{margin-top:15px}.txtmenu{margin:0;color:white;float:right;font-size:1.1em;list-style-type:none;padding:0;position:absolute;right:89px;top:27px}.col-xs-9{padding:0}#container-slider{position:fixed}#container-slider img{width:1600px;height:auto}.servicios{text-align:center}.servicios h3{font-size:1.1em;text-align:center;text-transform:uppercase}.servicios .col-xs-6{border-bottom:1px solid #4f4f4f;margin-bottom:10px;text-align:center}.servicios figure{display:inline-block;margin:0 auto;vertical-align:top}.servicios figure img{height:auto;margin-bottom:10px;max-width:350px;width:100%}.footer{text-align:center;width:100%}.footer ul{background:grey;padding:0;width:100%}.footer ul li{margin:-4px;background:red;display:inline-block;list-style-type:none;vertical-align:middle}.footer ul li a{padding:1em}.facebook,.twitter,.google{padding:2.13em 0}.tel{font-size:14px}.tel li{width:30%}.carousel-indicators{display:none}.carousel-control.left,.carousel-control.right{display:none}.item{background:#7ac043}.carousel-caption{background:grey;padding-left:9px;width:80%;color:#4f4f4f;color:white;display:inline-block;text-align:left;text-shadow:none;vertical-align:middle}.flechita{font-size:4em;height:auto;margin:0;padding:0;display:inline-block;text-align:center;vertical-align:middle}.flechita a{color:white}.txt-servicios{width:80%}footer #sociales{background:#20358c;height:20px;width:100%}@media screen and (min-width: 768px){.fondomenu{background:none;background:rgba(255,255,255,0.5);position:absolute;width:100%;z-index:100}figure#logo-desktop img{height:auto;margin-left:80px;width:100px}.carousel{position:relative}.carousel-caption{width:92%}}#main-menu{font-weight:bold;margin-top:70px}
