--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -1,46 +1,1 @@
-/* line 1, ../sass/portafolio.scss */
-#bg {
-  background-image: url("../img/bgimter.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-}
-
-/* line 8, ../sass/portafolio.scss */
-h1 {
-  font-size: 1.5em;
-  text-align: center;
-  margin-top: 250px;
-}
-
-/* line 14, ../sass/portafolio.scss */
-#linea2 {
-  border-bottom: 1px solid black;
-  width: 30%;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-
-/* line 20, ../sass/portafolio.scss */
-.thumbnails {
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-  width: 80%;
-}
-/* line 25, ../sass/portafolio.scss */
-.thumbnails .span3 {
-  display: inline-block;
-}
-/* line 28, ../sass/portafolio.scss */
-.thumbnails .thumbnail {
-  border: none;
-  display: inline;
-  padding: 0;
-}
-
-/* line 35, ../sass/portafolio.scss */
-#lightbox img {
-  width: 100%;
-}
+#bg{background-image:url("../img/bgimter.png");background-position:center;background-repeat:no-repeat;background-size:cover;height:auto}h1{font-size:1.5em;text-align:center;margin-top:250px}#linea2{border-bottom:1px solid black;width:30%;margin:0 auto;margin-bottom:30px}.thumbnails{margin:0 auto;padding:0;text-align:center;width:80%}.thumbnails .span3{display:inline-block}.thumbnails .thumbnail{border:none;display:inline;padding:0}#lightbox img{width:100%}
