--- a/css/sistemas-ssfi.css
+++ b/css/sistemas-ssfi.css
@@ -1,319 +1,1 @@
-/* line 9, ../sass/sistemas-ssfi.scss */
-article .sist-solares {
-  text-align: center;
-}
-/* line 12, ../sass/sistemas-ssfi.scss */
-article .sist-solares figure img {
-  height: auto;
-  max-height: 250px;
-  max-width: 480px;
-  width: 100%;
-}
-/* line 19, ../sass/sistemas-ssfi.scss */
-article .sist-solares p {
-  font-size: 16px;
-  margin-top: 1em;
-  text-align: center;
-}
-/* line 24, ../sass/sistemas-ssfi.scss */
-article .sist-solares span {
-  font-size: 16px;
-  font-style: italic;
-}
-
-/* line 31, ../sass/sistemas-ssfi.scss */
-#bg {
-  background-image: url("../img/bgimter.png");
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-}
-
-/* line 40, ../sass/sistemas-ssfi.scss */
-.ssfi h1 {
-  font-size: 1.5em;
-  text-align: center;
-}
-/* line 44, ../sass/sistemas-ssfi.scss */
-.ssfi #linea {
-  border-bottom: 1px solid #7ac043;
-  margin-bottom: 10px;
-  margin: 0 auto;
-  width: 50%;
-}
-
-/* line 52, ../sass/sistemas-ssfi.scss */
-#acordion {
-  background-color: red;
-  border-radius: 5px;
-  margin: 40px auto;
-  max-width: 700px;
-  min-height: 50px;
-  overflow: hidden;
-  width: 100%;
-}
-/* line 61, ../sass/sistemas-ssfi.scss */
-#acordion .titulo {
-  background-color: #7ac043;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  height: 50px;
-  max-width: 700px;
-  overflow: hidden;
-  width: 100%;
-}
-/* line 72, ../sass/sistemas-ssfi.scss */
-#acordion p.titulo {
-  color: white;
-  margin: 1px;
-  width: 100%;
-}
-/* line 78, ../sass/sistemas-ssfi.scss */
-#acordion div.info {
-  -webkit-transition: height 0.2s;
-  background-color: #f5f5f5;
-  height: 0px;
-  max-width: 700px;
-  overflow: hidden;
-  width: 100%;
-}
-/* line 87, ../sass/sistemas-ssfi.scss */
-#acordion p.info {
-  color: #4f4f4f;
-  margin: 0;
-  padding: 1em;
-}
-/* line 93, ../sass/sistemas-ssfi.scss */
-#acordion div.subapartado:hover div.info {
-  height: 180px;
-}
-
-/* line 101, ../sass/sistemas-ssfi.scss */
-.container #enphase {
-  background: url("../img/enphase.png");
-  background-size: 100%;
-  width: 124px;
-  height: 65px;
-  margin: 0;
-  padding: 0;
-}
-/* line 108, ../sass/sistemas-ssfi.scss */
-.container #enphase:hover {
-  background: url("../img/enphase-hover.png");
-  background-size: 100%;
-  width: 124px;
-  height: 65px;
-  cursor: pointer;
-}
-/* line 116, ../sass/sistemas-ssfi.scss */
-.container #yingli {
-  background: url("../img/yingli.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-}
-/* line 121, ../sass/sistemas-ssfi.scss */
-.container #yingli:hover {
-  background: url("../img/yingli-hover.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-  cursor: pointer;
-}
-/* line 129, ../sass/sistemas-ssfi.scss */
-.container #fronius {
-  background: url("../img/fronius.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-}
-/* line 134, ../sass/sistemas-ssfi.scss */
-.container #fronius:hover {
-  background: url("../img/fronius-hover.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-  cursor: pointer;
-}
-/* line 142, ../sass/sistemas-ssfi.scss */
-.container #solar-world {
-  background: url("../img/solarworld.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-}
-/* line 147, ../sass/sistemas-ssfi.scss */
-.container #solar-world:hover {
-  background: url("../img/solarworld-hover.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-  cursor: pointer;
-}
-/* line 155, ../sass/sistemas-ssfi.scss */
-.container #jinko {
-  background: url("../img/jinko.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-}
-/* line 160, ../sass/sistemas-ssfi.scss */
-.container #jinko:hover {
-  background: url("../img/jinko-hover.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-  cursor: pointer;
-}
-/* line 168, ../sass/sistemas-ssfi.scss */
-.container #solartec {
-  background: url("../img/solartec.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-}
-/* line 173, ../sass/sistemas-ssfi.scss */
-.container #solartec:hover {
-  background: url("../img/solartec-hover.png");
-  background-size: 100%;
-  width: 121px;
-  height: 72px;
-  cursor: pointer;
-}
-
-/* line 183, ../sass/sistemas-ssfi.scss */
-.proveedores {
-  text-align: center;
-}
-/* line 185, ../sass/sistemas-ssfi.scss */
-.proveedores h3 {
-  text-align: center;
-  font-size: 18px;
-}
-/* line 189, ../sass/sistemas-ssfi.scss */
-.proveedores #linea2 {
-  margin: 0 auto;
-  border: 1px solid black;
-  width: 15%;
-}
-/* line 194, ../sass/sistemas-ssfi.scss */
-.proveedores ul {
-  margin: 30px;
-  padding: 0;
-}
-/* line 197, ../sass/sistemas-ssfi.scss */
-.proveedores ul li {
-  display: inline-block;
-  vertical-align: top;
-}
-
-/* line 203, ../sass/sistemas-ssfi.scss */
-.center-block {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* line 208, ../sass/sistemas-ssfi.scss */
-.financiamiento {
-  text-align: center;
-}
-/* line 210, ../sass/sistemas-ssfi.scss */
-.financiamiento h3 {
-  text-align: center;
-}
-/* line 213, ../sass/sistemas-ssfi.scss */
-.financiamiento #linea2 {
-  margin: 0 auto;
-  border: 1px solid black;
-  width: 15%;
-  margin-bottom: 10px;
-}
-/* line 219, ../sass/sistemas-ssfi.scss */
-.financiamiento ul {
-  margin: 30px;
-  padding: 0;
-}
-/* line 222, ../sass/sistemas-ssfi.scss */
-.financiamiento ul li {
-  display: inline-block;
-  vertical-align: bottom;
-}
-/* line 227, ../sass/sistemas-ssfi.scss */
-.financiamiento p {
-  text-align: center;
-}
-/* line 230, ../sass/sistemas-ssfi.scss */
-.financiamiento #cibanco {
-  background: url("../img/cibanco.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  width: 124px;
-  height: 70px;
-}
-/* line 237, ../sass/sistemas-ssfi.scss */
-.financiamiento #nacional-financiera {
-  background: url("../img/n-f.jpg");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  width: 124px;
-  height: 70px;
-}
-/* line 244, ../sass/sistemas-ssfi.scss */
-.financiamiento #banbajio {
-  background: url("../img/banbajio.jpg");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  width: 124px;
-  height: 70px;
-}
-/* line 251, ../sass/sistemas-ssfi.scss */
-.financiamiento #imter-financiamiento {
-  background: url("../img/imter-financia.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  width: 120px;
-  height: 94px;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 262, ../sass/sistemas-ssfi.scss */
-  .ssfi h1 {
-    margin-top: 180px;
-    text-align: left;
-  }
-  /* line 266, ../sass/sistemas-ssfi.scss */
-  .ssfi #linea {
-    border-bottom: 2px solid #7ac043;
-    width: 30%;
-  }
-
-  /* line 273, ../sass/sistemas-ssfi.scss */
-  article .sist-solares {
-    text-align: right;
-  }
-}
-@media screen and (min-width: 1200px) {
-  /* line 282, ../sass/sistemas-ssfi.scss */
-  #bg {
-    background-image: url("../img/bgimter.png");
-    width: 100%;
-    background-attachment: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: auto;
-  }
-
-  /* line 291, ../sass/sistemas-ssfi.scss */
-  .ssfi h1 {
-    margin-top: 200px;
-  }
-  /* line 294, ../sass/sistemas-ssfi.scss */
-  .ssfi #linea {
-    border-bottom: 2px solid #7ac043;
-    width: 30%;
-    margin-left: 0;
-    margin-bottom: 50px;
-  }
-}
+article .sist-solares{text-align:center}article .sist-solares figure img{height:auto;max-height:250px;max-width:480px;width:100%}article .sist-solares p{font-size:16px;margin-top:1em;text-align:center}article .sist-solares span{font-size:16px;font-style:italic}#bg{background-image:url("../img/bgimter.png");width:100%;background-position:center;background-repeat:no-repeat;background-size:cover;height:auto}.ssfi h1{font-size:1.5em;text-align:center}.ssfi #linea{border-bottom:1px solid #7ac043;margin-bottom:10px;margin:0 auto;width:50%}#acordion{background-color:red;border-radius:5px;margin:40px auto;max-width:700px;min-height:50px;overflow:hidden;width:100%}#acordion .titulo{background-color:#7ac043;border-bottom:1px solid rgba(0,0,0,0.1);height:50px;max-width:700px;overflow:hidden;width:100%}#acordion p.titulo{color:white;margin:1px;width:100%}#acordion div.info{-webkit-transition:height 0.2s;background-color:#f5f5f5;height:0px;max-width:700px;overflow:hidden;width:100%}#acordion p.info{color:#4f4f4f;margin:0;padding:1em}#acordion div.subapartado:hover div.info{height:180px}.container #enphase{background:url("../img/enphase.png");background-size:100%;width:124px;height:65px;margin:0;padding:0}.container #enphase:hover{background:url("../img/enphase-hover.png");background-size:100%;width:124px;height:65px;cursor:pointer}.container #yingli{background:url("../img/yingli.png");background-size:100%;width:121px;height:72px}.container #yingli:hover{background:url("../img/yingli-hover.png");background-size:100%;width:121px;height:72px;cursor:pointer}.container #fronius{background:url("../img/fronius.png");background-size:100%;width:121px;height:72px}.container #fronius:hover{background:url("../img/fronius-hover.png");background-size:100%;width:121px;height:72px;cursor:pointer}.container #solar-world{background:url("../img/solarworld.png");background-size:100%;width:121px;height:72px}.container #solar-world:hover{background:url("../img/solarworld-hover.png");background-size:100%;width:121px;height:72px;cursor:pointer}.container #jinko{background:url("../img/jinko.png");background-size:100%;width:121px;height:72px}.container #jinko:hover{background:url("../img/jinko-hover.png");background-size:100%;width:121px;height:72px;cursor:pointer}.container #solartec{background:url("../img/solartec.png");background-size:100%;width:121px;height:72px}.container #solartec:hover{background:url("../img/solartec-hover.png");background-size:100%;width:121px;height:72px;cursor:pointer}.proveedores{text-align:center}.proveedores h3{text-align:center;font-size:18px}.proveedores #linea2{margin:0 auto;border:1px solid black;width:15%}.proveedores ul{margin:30px;padding:0}.proveedores ul li{display:inline-block;vertical-align:top}.center-block{display:block;margin-left:auto;margin-right:auto}.financiamiento{text-align:center}.financiamiento h3{text-align:center}.financiamiento #linea2{margin:0 auto;border:1px solid black;width:15%;margin-bottom:10px}.financiamiento ul{margin:30px;padding:0}.financiamiento ul li{display:inline-block;vertical-align:bottom}.financiamiento p{text-align:center}.financiamiento #cibanco{background:url("../img/cibanco.png");background-size:100%;background-repeat:no-repeat;width:124px;height:70px}.financiamiento #nacional-financiera{background:url("../img/n-f.jpg");background-size:100%;background-repeat:no-repeat;width:124px;height:70px}.financiamiento #banbajio{background:url("../img/banbajio.jpg");background-size:100%;background-repeat:no-repeat;width:124px;height:70px}.financiamiento #imter-financiamiento{background:url("../img/imter-financia.png");background-size:100%;background-repeat:no-repeat;width:120px;height:94px}@media screen and (min-width: 768px){.ssfi h1{margin-top:180px;text-align:left}.ssfi #linea{border-bottom:2px solid #7ac043;width:30%}article .sist-solares{text-align:right}}@media screen and (min-width: 1200px){#bg{background-image:url("../img/bgimter.png");width:100%;background-attachment:center;background-repeat:no-repeat;background-size:cover;height:auto}.ssfi h1{margin-top:200px}.ssfi #linea{border-bottom:2px solid #7ac043;width:30%;margin-left:0;margin-bottom:50px}}
