--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,67 +1,1 @@
-/* line 8, ../sass/contacto.scss */
-#bg {
-  background-image: url("../img/bgimter.png");
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-}
-
-/* line 17, ../sass/contacto.scss */
-.contacto h1 {
-  font-size: 1.5em;
-  text-align: center;
-}
-
-/* line 22, ../sass/contacto.scss */
-.imagen-captcha-btn {
-  list-style-type: none;
-  margin-bottom: 16px;
-  text-align: center;
-}
-
-/* line 28, ../sass/contacto.scss */
-#mapa {
-  background: #dcdcdc;
-  height: 400px;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 37, ../sass/contacto.scss */
-  .contacto h1 {
-    margin-top: 200px;
-    text-align: left;
-  }
-  /* line 41, ../sass/contacto.scss */
-  .contacto p {
-    float: right;
-  }
-
-  /* line 47, ../sass/contacto.scss */
-  .tel-ubicacion {
-    text-align: center;
-  }
-  /* line 49, ../sass/contacto.scss */
-  .tel-ubicacion ul {
-    list-style-type: none;
-  }
-
-  /* line 54, ../sass/contacto.scss */
-  input[type=submit].btn-block {
-    float: right;
-    margin-right: 10px;
-    width: 30%;
-  }
-
-  /* line 59, ../sass/contacto.scss */
-  #mensaje {
-    height: 200px;
-  }
-
-  /* line 63, ../sass/contacto.scss */
-  .img-captcha {
-    max-width: 200px;
-  }
-}
+#bg{background-image:url("../img/bgimter.png");width:100%;background-position:center;background-repeat:no-repeat;background-size:cover;height:auto}.contacto h1{font-size:1.5em;text-align:center}.imagen-captcha-btn{list-style-type:none;margin-bottom:16px;text-align:center}#mapa{background:#dcdcdc;height:400px;width:100%}@media screen and (min-width: 768px){.contacto h1{margin-top:200px;text-align:left}.contacto p{float:right}.tel-ubicacion{text-align:center}.tel-ubicacion ul{list-style-type:none}input[type=submit].btn-block{float:right;margin-right:10px;width:30%}#mensaje{height:200px}.img-captcha{max-width:200px}}
