--- a/css/filosofia.css
+++ b/css/filosofia.css
@@ -1,78 +1,1 @@
-/* line 8, ../sass/filosofia.scss */
-#bg {
-  background-image: url("../img/bgimter.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-}
-
-/* line 16, ../sass/filosofia.scss */
-#bg2 {
-  background-image: url("../img/bg-mision-vision.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: auto;
-  width: 100%;
-}
-
-/* line 27, ../sass/filosofia.scss */
-.txt-center {
-  font-size: 1em;
-  text-align: center;
-}
-/* line 30, ../sass/filosofia.scss */
-.txt-center h1, .txt-center h2, .txt-center h3 {
-  font-size: 1.5em;
-}
-/* line 33, ../sass/filosofia.scss */
-.txt-center p:last-child {
-  margin-bottom: 100px;
-}
-/* line 37, ../sass/filosofia.scss */
-.txt-center #linea {
-  border-bottom: 1px solid #7ac043;
-  height: auto;
-  margin: auto;
-  width: 50%;
-  margin-top: 15px;
-  margin-bottom: 30px;
-}
-/* line 45, ../sass/filosofia.scss */
-.txt-center #linea2 {
-  border-bottom: 1px solid #000;
-  height: auto;
-  margin-bottom: 0.8em;
-  margin: auto;
-  width: 30%;
-}
-/* line 52, ../sass/filosofia.scss */
-.txt-center ol {
-  font-size: 16px;
-  font-style: italic;
-  padding: 0;
-}
-/* line 56, ../sass/filosofia.scss */
-.txt-center ol li {
-  list-style-type: none;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 66, ../sass/filosofia.scss */
-  h1 {
-    margin-top: 200px;
-    text-align: left;
-  }
-
-  /* line 72, ../sass/filosofia.scss */
-  .txt-center #linea {
-    border-bottom: 2px solid #7ac043;
-    margin-left: 0;
-    width: 20%;
-  }
-  /* line 77, ../sass/filosofia.scss */
-  .txt-center p {
-    text-align: left;
-  }
-}
+#bg{background-image:url("../img/bgimter.png");background-position:center;background-repeat:no-repeat;background-size:cover;height:auto}#bg2{background-image:url("../img/bg-mision-vision.png");background-position:center;background-repeat:no-repeat;background-size:cover;height:auto;width:100%}.txt-center{font-size:1em;text-align:center}.txt-center h1,.txt-center h2,.txt-center h3{font-size:1.5em}.txt-center p:last-child{margin-bottom:100px}.txt-center #linea{border-bottom:1px solid #7ac043;height:auto;margin:auto;width:50%;margin-top:15px;margin-bottom:30px}.txt-center #linea2{border-bottom:1px solid #000;height:auto;margin-bottom:0.8em;margin:auto;width:30%}.txt-center ol{font-size:16px;font-style:italic;padding:0}.txt-center ol li{list-style-type:none}@media screen and (min-width: 768px){h1{margin-top:200px;text-align:left}.txt-center #linea{border-bottom:2px solid #7ac043;margin-left:0;width:20%}.txt-center p{text-align:left}}
