--- a/sass/sistemas-ssfi.scss
+++ b/sass/sistemas-ssfi.scss
@@ -43,57 +43,69 @@ article{
   }
   #linea{
 			border-bottom: 1px solid $verde-claro;
-			margin-bottom: 10px;
 			margin: 0 auto;
+			margin-bottom: 10px;
 			width: 50%;
 		}
 }
 
-#acordion{
-	background-color: red;
-	border-radius: 5px;
-	margin:40px auto;
-	max-width: 700px;
-	min-height:50px;
-	overflow: hidden;
-	width:100%;
-
-	.titulo{
-		background-color: $verde-claro;
-		border-bottom: 1px solid rgba(0,0,0,0.1);
-		height:50px;
-		max-width: 700px;
-		overflow: hidden;
-		width:100%;
-	}
-    
-
-
-	p.titulo{
-		color: white;
-		margin:1px;
-		width: 100%;
-	}
-
-	div.info{
-		-webkit-transition: height 0.2s;
-		background-color: #f5f5f5;
-		height:0px;
-		max-width: 700px;
-		overflow: hidden;
-		width:100%;
-	}
-
-	p.info{
-		color:#4f4f4f;
-		margin:0;
-		padding: 1em;
-	}
-
-div.subapartado:hover div.info{
-	height:180px;
-	}
-}
+#accordion-contenedor{
+			margin: 40px auto;
+			width: 95%;
+			min-width: 300px;
+			max-width: 960px;
+			h1{
+				font-size: 40px;
+			}
+			.accordion-container{
+				width: 100%;
+				margin: 0 0 1px 0;
+				clear: both;
+				.accordion-titulo{
+					position: relative;
+					display: block;
+					padding: 18px;
+					font-size: 16px;
+					font-weight: 300;
+					background: $verde-claro;
+					color: #fff;
+					text-decoration: none;
+					border-radius: 3px;
+				}
+				.accordion-titulo.open{
+					color: #fff;
+				}
+				
+				.accordion-titulo span.toggle-icon:before{
+					content: "+"
+				}
+				.accordion-titulo.open span.toggle-icon:before{
+					content: "-"
+				}
+				.accordion-titulo span.toggle-icon{
+					position: absolute;
+					top: 3px;
+					right: 20px;
+					font-size: 38px;
+					
+				}
+				.accordion-content{
+					display: none;
+					padding: 20px;
+					overflow: auto;
+				}
+				.accordion-content p{
+					margin: 0;
+				}
+				.accordion-content img{
+					display: block;
+					float: left;
+					margin: 0 15px 10px 0;
+					width: 50%;
+					height: auto;
+				}
+			}
+		}
 
 
 .container{
@@ -268,6 +280,9 @@ div.subapartado:hover div.info{
 			width: 30%;
 		}
 	}
+	.accordion-content{
+				padding: 10px 0;
+			}
 
 	article{
 		.sist-solares{
